eb_codegen_fast/src/snapshots/eb_codegen_fast__function__test__codegen1.snap
---
source: src/function.rs
expression: ctx

---
FunctionContext {
    name: "f",
    param_names: [],
    code: Code(
        [],
    ),
    children: [],
}
