eb_codegen_fast/src/snapshots/eb_codegen_fast__function__test__codegen2.snap
---
source: src/function.rs
expression: ctx

---
Context {
    name: "f",
    param_names: [
        "x",
    ],
    code: Code(
        [
            PushStr(
                "x",
            ),
        ],
    ),
    children: [],
}
